# uproctrace

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exports  lwproctrace.proto  uproctrace.proto
dump/: CMakeLists.txt  dump.py
liblwptev/: CMakeLists.txt
liblwptev/include/liblwptev/: proc_begin.h  proc_end.h
liblwptev/src/: cleaner.c  cleaner.h  event.c  event.h  macros.h  proc_begin.c  proc_end.c  read_file.c  read_file.h  stringlist.c  stringlist.h  symlink.c  symlink.h  timing.c  timing.h
liblwptpl/: CMakeLists.txt
liblwptpl/src/: constructor.c  destructor.c  write.c  write.h
liblwpttr/: CMakeLists.txt  lwproctrace.proto
liblwpttr/include/liblwpttr/: event.h  proc_begin.h  proc_end.h
liblwpttr/src/: cleaner.c  cleaner.h  event.c  event.h  proc_begin.c  proc_end.c  stringlist.c  stringlist.h  symlink.c  symlink.h  timestamp.c  timestamp.h  timing.c  timing.h
libuptev/: CMakeLists.txt
libuptev/include/uptev/: proc_begin.h  proc_end.h
libuptev/src/: cleaner.c  cleaner.h  event.c  event.h  macros.h  proc_begin.c  proc_end.c  read_file.c  read_file.h  stringlist.c  stringlist.h  symlink.c  symlink.h  timing.c  timing.h
libuptpl/: CMakeLists.txt
libuptpl/src/: constructor.c  destructor.c  write.c  write.h
python3/: CMakeLists.txt
python3/uproctrace/: CMakeLists.txt  __init__.py  dump.py  formatting.py  gui.glade  gui.py  gui_glade_footer.py  gui_glade_header.py  parse.py  processes.py  psinfo.py  pstree.py  stats.py  tool.py
tests/: CMakeLists.txt
tests/first/: CMakeLists.txt  first.bash  traceme.bash
tests/fork/: CMakeLists.txt  forkapp.c  forkapp.pstree_ref  forktest.bash
tests/pylint/: CMakeLists.txt  pylint.rc
tests/trace_build/: CMakeLists.txt  run_build.bash  trace_build.bash
upt-dump/: CMakeLists.txt  upt-dump.py
upt-gui/: CMakeLists.txt  upt-gui.glade  upt-gui.py
upt-tool/: CMakeLists.txt  upt-tool.bash  upt-tool.py
upt-trace/: CMakeLists.txt  upt-trace.bash
